# mclocks

./: .gitignore  CHANGES  README.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  sticky.html  vite.config.js  wdio.conf.js
.github/: dependabot.yml
docs/: README.fr.md  README.id.md  README.kr.md  README.pt.md  about-config-json.md  how-to-develop-mcp.md  how-to-develop.md  how-to-run-mclocks-tests.md  how-to-run-test.md  index.md  mclocks-cheat-sheet.md
publish/: index.html
scripts/: mc-preview
src/: app.js  cbhist.css  cbhist.js  chist.css  chist.js  clipboard.js  clock_ctx.js  clock_matter.js  clocks.js  config.js  conversion.js  ctx.js  editor.js  index.css  index.html  keys.js  main.js  matter.js  mclocks.js  package.json  preload.js  (+13 more)
src-mcp/: README.md  dst.js  package-lock.json  package.json  server.js
src-tauri/: Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: about_env.rs  calendar.rs  cbhist.rs  chist.rs  config.rs  lib.rs  main.rs  sticky.rs  tray.rs  util.rs  web_server.rs  window_state.rs
src-tauri/src/web/: common.rs  dd_publish.rs  dump_handler.rs  editor_handler.rs  file.rs  file_md.rs  handler_editor.rs  handler_local_preview.rs  handler_resource_meta.rs  handler_slow.rs  handler_static.rs  handler_status.rs  markdown_live_reload.rs  mod.rs  slow_handler.rs  static_ini.rs  static_json.rs  static_json_new.rs  static_md.rs  static_structured.rs  static_toml.rs  static_yaml.rs  status_code.rs  status_handler.rs
src-tauri/src/web/handler_static/: ini.rs  json.rs  md.rs  structured_dispatcher.rs  structured_renderer.rs  toml.rs  yaml.rs
src-tauri/src/web/handler_static_source/: ini.rs  md.rs  structured_dispatcher.rs  structured_renderer.rs  template_common.rs  toml.rs  xml.rs
(+77 files in other folders)
