[package]
name = "mclocks"
version = "0.2.49"
description = "The desktop clock application for multiple time zones🕒🌍🕕"
authors = ["bayashi"]
license = "Artistic-2.0"
edition = "2024"

[lib]
name = "mclocks_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dev-dependencies]
tauri = { version = "2.11.1", features = [
    "devtools",
] }
tempfile = "3"
reqwest = { version = "0.11", features = ["blocking", "json"] }

[build-dependencies]
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
tauri = { version = "2.11.1", features = ["macos-private-api", "image-png", "tray-icon"] }
tao = { version = "0.34.8", default-features = false, features = ["rwh_06"] }
serde = { version = "1", features = [
    "derive",
] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.9"
directories = "6.0.0"
tauri-plugin-os = "2.3.2"
tauri-plugin-notification = "2.3.3"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-opener = "2.5.3"

tauri-plugin-single-instance = "2.4.0"
tauri-plugin-window-state = "2.4.1"
tiny_http = "0.12"
encoding_rs = "0.8"
urlencoding = "2.1"
chardetng = "0.1.17"
rand = "=0.9.3"
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
tempfile = "3"
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
pulldown-cmark = "0.13.1"
configparser = "3.1.0"
mime_guess = "2.0.5"
roxmltree = "0.21.1"
json5 = "1.3.1"
tokio = { version = "1.43", features = ["macros", "rt-multi-thread", "net", "sync"] }
tokio-tungstenite = "0.24"
tungstenite = "0.24"
notify = "6"
futures-util = { version = "0.3", default-features = false, features = ["sink"] }

[target.'cfg(windows)'.dependencies]
winreg = "0.55"
